feat: update home image

--- a/server/frontend/static/Home.html
+++ b/server/frontend/static/Home.html
@@ -39,7 +39,7 @@
         <div class="banner-text">WELCOME</div>
         <div class="banner-text">to BestCars</div>
         <a class="banner-button" href="/dealers">VIEW DEALERSHIPS</a>
-        <img src="/static/assets/home_banner.jpg">
+        <img src="/static/assets/home_banner.png">
       </div>
     
     </div>
