fix: banner styling

--- a/server/frontend/static/About.html
+++ b/server/frontend/static/About.html
@@ -37,7 +37,8 @@
 
       <div class="banner">
         <div class="banner-fade"></div>
-        <div class="banner-text">ABOUT US
+        <div class="banner-text">ABOUT US</div>
+        <div class="banner-text">
           <p></p>
           <p class="banner-subtext">Welcome to BestCars, home to the best cars in North America.</p>
           <p class="banner-subtext">We deal in sale of domestic and imported cars at reasonable prices.</p>
