--- a/server/frontend/static/Home.html
+++ b/server/frontend/static/Home.html
@@ -38,10 +38,13 @@
         <div class="banner-fade"></div>
         <div class="banner-text">WELCOME</div>
         <div class="banner-text">to BestCars</div>
-        <a class="banner-button" href="/dealers">VIEW DEALERSHIPS</a>
+        <div class="banner-text">
+          <p></p><p></p><p></p></p></p></p>
+          <a class="banner-button" href="/dealers">VIEW DEALERSHIPS</a>
+        </div>
         <img src="/static/assets/home_banner.png">
       </div>
-    
+
     </div>
   </body>
 
