feat: add image alt

--- a/server/frontend/static/About.html
+++ b/server/frontend/static/About.html
@@ -43,7 +43,7 @@
           <p class="banner-subtext">Welcome to BestCars, home to the best cars in North America.</p>
           <p class="banner-subtext">We deal in sale of domestic and imported cars at reasonable prices.</p>
         </div>
-        <img src="/static/assets/home_banner.png">
+        <img src="/static/assets/home_banner.png" alt="BestCars Dealerships">
       </div>
 
     </div>
