--- a/server/frontend/static/Home.html
+++ b/server/frontend/static/Home.html
@@ -42,7 +42,7 @@
           <p></p><p></p><p></p></p></p></p>
           <a class="banner-button" href="/dealers">VIEW DEALERSHIPS</a>
         </div>
-        <img src="/static/assets/home_banner.png">
+        <img src="/static/assets/home_banner.png" alt="BestCars Dealerships">
       </div>
 
     </div>
